# reflect

./: docker-compose.yml
backend/: Dockerfile  api.py  const.py  example.html  example.txt  lang.py  models.py  ok.html  pyproject.toml  req.txt  utils.py
frontend/: Dockerfile  index.html  package.json  package.json.old  pnpm-lock.yaml
frontend/src/: App.svelte  ai.ts  api.ts  interaction.ts  store.ts  types.ts  utils.ts  version.ts
frontend/src/lib/: CodeEditor.svelte  Element.svelte  Sandbox.svelte  SandboxContainer.svelte  Version.svelte
reflect_frontend/: index.html  package.json
reflect_frontend/src/: ai.ts  script.ts  types.ts  utils.ts
